# Ractochat

./: .env.example  .gitignore  README.md  claude.md  openai.md
backend/: Cargo.toml
backend/data/: app.db-shm  app.db-wal
backend/migrations/: 001_init.sql  002_add_user_columns.sql  003_policies.sql
backend/src/: admin.rs  audit.rs  auth.rs  config.rs  db.rs  error.rs  governance.rs  main.rs  pii.rs
backend/src/llm/: anthropic.rs  mod.rs  openai.rs
backend/src/model_router/: accounts.rs  catalog.rs  mod.rs
backend/src/routes/: chat.rs
data/: .gitkeep
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/chat/: ChatInterface.tsx  MessageInput.tsx  MessageList.tsx  ModelSelector.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/lib/: admin.ts  api.ts
